Fix overflow for html and body elements
Was `overflow: auto`; should have been `overflow: hidden` from the
start.

--- a/ecoroofs/static/base.scss
+++ b/ecoroofs/static/base.scss
@@ -7,7 +7,7 @@
 
 html, body {
     height: 100%;
-    overflow: auto;
+    overflow: hidden;
     margin: 0;
     padding: 0;
 }
